July 2005


Two routines added to the "API": ggobi_data_set_var_type and ggobi_data_set_time_var to allow
 for users to specify the type of a variable and whether it is a time variable or not.


Menu item added to each display to bring the associated control panel to the foreground.

Option to use check menu items for the interactive modes for a display, i.e. Scale, Brush, Identify, ...
This gives a visual display of what is the currently active mode and also a way to turn it off
directly rather than requiring to switch to a different, display-dependent mode, e.g. XYPlot.
  In ggobirc as <useRadioMenuItems on="true" />



Internal changes
   removed (ifdef'ed away) the calls to display_add() for each of the display types.
   These resulted in display_add being called twice: there and via the extended_display_open_cb.
   This fixes the message about "Display has already been added...." appearing.

   Information about mismatching structure sizes for plugins and "modules" (i.e. Rggobi) announce  which 
   module is complaining.  (Added the GGobiPluginDetails to the call to checkGGobiStructSizes().)




June 2005

Paused tours  were causing problems with consuming large amount of
	cycles. This seems to be fixed now.


time variables  In the XML files, one can specify that a variable can
	be used as a time variable using an attribute time.  The value
	of the attribute should be "yes" or "true".  (No upper case!)
	Such variables can then be identified when creating a time
	series plot.
	








statusbar is now non-editable by the user.

parcoords_new and tsplot_new become *_with_vars
and the original versions  take an exta argument
 - displayd.

windowDisplayd has an field that allows the constructor to 
specify that we don't want a window. The creation
code then honors this and leaves the display to be managed
by the creator.

scatmat_new now takes a display argument and has changes to allow the
lack of a window. Pass NULL for the display argument and it will